[easy_install]

[bdist_wheel]
universal=0

[versioneer]
VCS = git
style = pep440
versionfile_source = great_expectations/_version.py
versionfile_build = great_expectations/_version.py
tag_prefix =
parentdir_prefix = great_expectations-

[options]
python_requires = >=3.8

[tox:tox]
envlist = py38, py312
skipsdist=true

[testenv]
deps = 
    .
    -r reqs/requirements-dev-test.txt
    -c constraints-dev.txt
commands = invoke ci-tests -m "unit" --xdist --slowest=10 --timeout=2.5
